# servi-fleet-manager

./: .gitignore  README.md  docker-compose.ros2.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .coverage  .env  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: ros2_router.py
backend/app/api/routes/: replay.py  robots.py  tasks.py  websocket.py
backend/app/core/: config.py  connection_manager.py  database.py  redis.py  robot_simulator.py  robot_state.py
backend/app/models/: robot.py  task.py
backend/app/services/: alert_service.py  websocket_manager.py
backend/tests/: .gitignore  conftest.py  test_alerts.py  test_robots.py  test_ros2_bridge.py  test_tasks.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AlertPanel.tsx  RobotCard.tsx  RobotMap.tsx
frontend/src/hooks/: useWebSocket.ts
infra/k8s/: backend.yaml  frontend.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  ros2-bridge.yaml  secrets.yaml
infra/terraform/: outputs.tf  variables.tf
infra/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  (+1 more)
ros2_bridge/: Dockerfile  entrypoint.sh  requirements.txt  setup_utm_ubuntu.sh
ros2_bridge/servi_bridge/: package.xml  setup.cfg  setup.py
ros2_bridge/servi_bridge/servi_bridge/: bridge_node.py
