<?xml version="1.0"?>
<package format="3">
  <name>servi_bridge</name>
  <version>0.0.1</version>
  <description>Servi Fleet Manager ROS2 Bridge</description>
  <maintainer email="test@test.com">servi</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
